@@ -13,7 +13,7 @@ Version 2.10
 
 Version 2.9.5
 -------------
-(bugfix release, no release date yet)
+(bugfix release, released on January 28th 2017)
 
 - Restored the original repr of the internal `_GroupTuple` because this
   caused issues with ansible and it was an unintended change.  (#654)
@@ -27,6 +27,7 @@ Version 2.9.5
   async environments. (#668)
 - Reduce memory footprint slightly by reducing our unicode database dump
   we use for identifier matching on Python 3 (#666)
+- Fixed autoescaping not working for macros in async compilation mode. (#671)
 
 Version 2.9.4
 -------------
